# utf16_lit

./: Cargo.toml  README.md  changelog.md
.github/workflows/: rust.yml
src/: char_escape.rs  lib.rs
tests/: name_collision.rs  usage_test.rs  utf16.rs  utf16_null.rs
utf16_lit_impl/: Cargo.toml
utf16_lit_impl/src/: lib.rs
